--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.android.support:mediarouter-v7:28.0.0'
 
+    //gif사용
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
     //카카오톡
     implementation group: 'com.kakao.sdk', name: 'usermgmt', version: project.KAKAO_SDK_VERSION
