--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     }
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.android.support:mediarouter-v7:28.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.google.firebase:firebase-messaging:18.0.0'
 
     //gif사용
     implementation 'com.github.bumptech.glide:glide:3.7.0'
@@ -49,3 +51,4 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
+apply plugin: 'com.google.gms.google-services'
