--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.hanulproject">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -53,7 +54,7 @@
         <activity android:name=".menu.list.ListDetail"/>
         <activity android:name=".menu.notice.NoticeDetail" />
         <activity android:name=".menu.complain.ComplainDetail" />
-        <activity android:name=".menu.community.CommunityDetail" />
+        <activity android:name=".menu.community.CommunityDetail"/>
         <activity android:name=".menu.community.CommunityInsertPage" />
         <activity android:name=".menu.complain.ComplainInsertPage" />
         <activity android:name=".menu.complain.ComplainModify" />
